--- a/style/style.css
+++ b/style/style.css
@@ -86,6 +86,9 @@ li {
   width: 200px;
   margin: 10px;
 }
+.social {
+  font-size: 20px;
+}
 
 @media only screen and (max-width: 768px) {
   /* Imposta la larghezza al 100% per .left */
